--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
   },
