--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.8.0",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
